<resources>
    <string name="app_name">Task Timer</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_add_task">Add Task</string>
    <string name="menu_main_show_duration">Duration Report</string>
    <string name="menu_main_show_about">About Task Timer</string>
    <string name="menu_main_generate">Generate Data</string>
    <string name="no_task_message">No Task Selected</string>

    <string name="task_list_item_edit_description">Edit Task</string>
    <string name="task_list_item_delete_description">Delete Task</string>

    <string name="task_add_edit_name">Name of the Task</string>
    <string name="task_add_edit_description">Description of the Task</string>
    <string name="task_add_edit_sort">Sort of the Task</string>
    <string name="task_add_edit_submit">Submit</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="action_settings">Settings</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions_description">Use the Add button in the toolbar above to create a new task.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldial_title">Delete</string>
    <string name="deldial_message">Deleting will also delete all timings associated with the task id %1$d: %2$s</string>
    <string name="close_edit_dialog_message">You have unsaved changes, do you want to abandon the changes or continue editing?</string>
    <string name="close_edit_dialog_positiveCaption">Continue editing</string>
    <string name="close_edit_dialog_negativeCaption">Abandon changes</string>
</resources>
