<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.kersuzananthony.tasktimer.activities.MainActivity">
    <item
        android:id="@+id/menu_main_addTask"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_main_add_task"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_main_showDuration"
        android:orderInCategory="200"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_main_show_duration"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_main_settings"
        android:orderInCategory="300"
        android:title="@string/menu_main_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_main_showAbout"
        android:orderInCategory="400"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_main_show_about"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_main_generate"
        android:orderInCategory="500"
        android:title="@string/menu_main_generate"
        android:visible="false"
        app:showAsAction="never"/>
</menu>
